--- a/OrangeHRM_POMTestNG_Project/pom.xml
+++ b/OrangeHRM_POMTestNG_Project/pom.xml
@@ -46,6 +46,20 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.11.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-handler -->
+<dependency>
+    <groupId>io.netty</groupId>
+    <artifactId>netty-handler</artifactId>
+    <version>4.1.101.Final</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.6.2</version>
+</dependency>
+
+
 
 	</dependencies>
 
